--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,10 @@
     "immer": "^10.0.4",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "recharts": "^3.7.0",
     "uuid": "^9.0.1",
     "zustand": "^4.5.2"
   },
